--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "PUBLIC_URL=/dsudoku-ts react-scripts build; rm -rf docs; mv build docs; cp docs/index.html docs/404.html"
   },
   "eslintConfig": {
     "extends": "react-app"
