--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "build": "PUBLIC_URL=/sudoku-ts react-scripts build; rm -rf docs; mv build docs; cp docs/index.html docs/404.html"
+    "build": "PUBLIC_URL=/sudoku-ts react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
